--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "sunell",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mongoose": "^6.1.3"
   }
 }
